# nuttx

tools/nxtool/: .gitignore  pyproject.toml
tools/nxtool/nxtool/: __main__.py  main.py
tools/nxtool/nxtool/cmds/: checkpatch.py  nxstyle.py
tools/nxtool/nxtool/nxstyle/: __main__.py  nxstyle.py
tools/nxtool/nxtool/nxstyle/queries/: c.scm  h.scm
