[project]
name = "nxtool"
description = "nuttx tool for scripts in tools folder"
version = "0.0.0"
requires-python = ">=3.12"
keywords = [
    "nuttx"
]
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "spell>=0.48.9",
    "cvt2utf>=1.3.2",
    "cmakelang>=0.6.13",
    "tree-sitter>=0.24.0"
]

[project.scripts]
nxtool = "nxtool.__main__:nxt.run"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pyright]
include = ["nxtool"]
exclude = [
  "**/node_modules",
  "**/__pycache__",
]
reportMissingImports = "error"
reportMissingTypeStubs = false